<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000"
    android:gravity="center">

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_weight="4"
        android:background="@drawable/shape_reader_menu"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/play_setting"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_play_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_play_mode_hand"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:button="@null"
                android:checked="true"
                android:drawableEnd="@drawable/selector_play_mode"
                android:text="@string/play_mode_hand"
                android:textColor="#000000"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/rb_play_mode_auto"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:button="@null"
                android:drawableEnd="@drawable/selector_play_mode"
                android:text="@string/play_mode_auto"
                android:textColor="#000000"
                android:textSize="16sp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_play_mode_cancel"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:text="@string/cancel"
            android:textColor="#254ff7"
            android:textSize="16sp" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="3" />
</LinearLayout>