<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000"
    android:gravity="center">
    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="3" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:background="@drawable/shape_reader_menu"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_history_tips"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            >
            <TextView
                android:id="@+id/bt_read_history_no"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/read_history_no"
                android:textSize="16sp"
                android:textColor="#254ff7"
                android:gravity="center"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="24dp"
                android:background="#33000000"/>
            <TextView
                android:id="@+id/bt_read_history_yes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/read_history_yes"
                android:textSize="16sp"
                android:textColor="#254ff7"
                android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="3" />
</LinearLayout>